Reworked on sub setting page and added a log

--- a/dashboard/templates/dash_statistics.html
+++ b/dashboard/templates/dash_statistics.html
@@ -46,7 +46,7 @@
         borderWidth: 1
       },
       {
-        label: '# {% trans "Of Pins Not Resolved" %}',
+        label: '# {% trans "Of Problems Not Resolved" %}',
         data: not_resolved,
         borderWidth: 1
       }
