finished new dashboard

--- a/dashboard/templates/dashboard_base.html
+++ b/dashboard/templates/dashboard_base.html
@@ -26,12 +26,17 @@
               </svg>
               </a>
 
+            <a  class="{% if request.resolver_match.url_name == "all_problems" %}active{% endif %}"  href="{% url 'all_problems' %}">
+              <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60" fill="none">
+<path opacity="0.75" fill="#49454F" d="m30.00407,15.8761a14.1239,14.1239 0 1 1 0,28.24779a14.1239,14.1239 0 1 1 0,-28.24779zm0,31.50715a17.38326,17.38326 0 1 0 0,-34.76651a17.38326,17.38326 0 1 0 0,34.76651zm-5.50017,-22.88343c-0.63829,0.63829 -0.63829,1.67042 0,2.30192l3.19146,3.19146l-3.19146,3.19146c-0.63829,0.63829 -0.63829,1.67042 0,2.30192s1.67042,0.63829 2.30192,0l3.19146,-3.19146l3.19146,3.19146c0.63829,0.63829 1.67042,0.63829 2.30192,0s0.63829,-1.67042 0,-2.30192l-3.19146,-3.19146l3.19146,-3.19146c0.63829,-0.63829 0.63829,-1.67042 0,-2.30192s-1.67042,-0.63829 -2.30192,0l-3.19146,3.19146l-3.19146,-3.19146c-0.63829,-0.63829 -1.67042,-0.63829 -2.30192,0z"></path>              </svg>
+            </a>
 
-            <a class="{% if request.resolver_match.url_name == "dashboard_stats" %}active{% endif %}" href="{% url 'dashboard_stats' %}">
+            <a  class="{% if request.resolver_match.url_name == "dashboard_stats" %}active{% endif %} hide_on_phone"  href="{% url 'dashboard_stats' %}">
               <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60" fill="none">
                   <path opacity="0.75" d="m19.68754,18.21432c0,-1.08649 -0.76806,-1.96428 -1.71874,-1.96428s-1.71874,0.87779 -1.71874,1.96428l0,20.62493c0,2.71316 1.92285,4.9107 4.29686,4.9107l21.4843,0c0.95068,0 1.71874,-0.87779 1.71874,-1.96428s-0.76806,-1.96428 -1.71874,-1.96428l-21.4843,0c-0.47265,0 -0.85937,-0.44196 -0.85937,-0.98214l0,-20.62493zm21.83879,5.31583c0.67138,-0.7673 0.67138,-2.01339 0,-2.78068s-1.76171,-0.7673 -2.4331,0l-5.65574,6.46985l-3.083,-3.52343c-0.67138,-0.7673 -1.76171,-0.7673 -2.4331,0l-6.0156,6.87498c-0.67138,0.7673 -0.67138,2.01339 0,2.78068s1.76171,0.7673 2.4331,0l4.80174,-5.48157l3.083,3.52343c0.67138,0.7673 1.76171,0.7673 2.4331,0l6.87498,-7.85712l-0.00537,-0.00614z" fill="#49454F"></path>
               </svg>
             </a>
+
             <form id='logout' action="{% url 'logout' %}" method="post">
                 {% csrf_token %}
               <a onclick="this.parentNode.submit()"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60" fill="none">
