--- a/static/dashboard/styles/sidebar.css
+++ b/static/dashboard/styles/sidebar.css
@@ -83,12 +83,16 @@ div.content {
 }
 
 /* On screens that are less than 400px, display the bar vertically, instead of horizontally */
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
   .sidebar a {
     text-align: center;
     float: none;
-  }}
+  }
 
+  .hide_on_phone:any-link {
+    display: none!important;
+  }
+}
 #danger-zone{
   background-color: #EFDCD3 !important;
 }
