--- a/static/dashboard/styles/dashboard_style.css
+++ b/static/dashboard/styles/dashboard_style.css
@@ -37,6 +37,9 @@ div.desc {
   height:100%;
     display: flex;
   grid-gap: 3px;
+    flex-wrap: wrap;
+  align-items: flex-start;
+  align-content: baseline;
 }
 div.problem{
     border: 1px solid rgba(219, 85, 85); 
