--- a/static/dashboard/styles/dashboard_stylesheet.css
+++ b/static/dashboard/styles/dashboard_stylesheet.css
@@ -11,10 +11,10 @@ h1{
     margin: 0;
 }
 .mother-container{
-    background: #efe1f8;
-    margin: 5px;
+    display: flex;
+    gap: 5px;
     height: 96%;
-    border-radius: 25px;
+    margin: 5px;
 }
 h1{
     color: #161b33;
@@ -115,4 +115,10 @@ canvas{
 .stat h1{
     width: fit-content;
     margin: 0;
+}
+.assigned-container,.all-problems-container{
+    background: #efe1f8;
+    border-radius: 25px;
+    flex-grow: 1;
+
 }
