--- a/timetable/templates/timetable.html
+++ b/timetable/templates/timetable.html
@@ -186,7 +186,15 @@
         <td><div class=timeframe  id="Tuesday-12:45" ></div></td>
         <td><div class=timeframe  id="Wednesday-12:45" ></div></td>
     </tr>
-    
+    <tr class="timerow">
+    <th style="width: 81.99999px;box-sizing: border-box">{% trans "Long Day" %}</th>
+        <td><div class=timeframe  id="Sunday-14:15" ></div></td>
+        <td><div class=timeframe  id="Monday-14:15" ></div></td>
+        <td><div class=timeframe  id="Tuesday-14:15" ></div></td>
+        <td><div class=timeframe  id="Wednesday-14:15" ></div></td>
+        <td><div class=timeframe  id="Thursday-14:15" ></div></td>
+    </tr>
+
 
 </table>
 
