Update backend image, fix static path, and adjust models
Upgraded backend container image to v4.06.0 and corrected a static file reference in the dashboard template. Added a default value for the `slack_id` field in the `teacher` model and adjusted `schedule` field constraints for class associations. Included migration for the model updates.

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -37,7 +37,7 @@
     var problemsList = ""
     if (response[room]['problems'][0]){
       
-      var img = `<img src="{% static "dashboard/xMark.png" %}" alt="problem" width="150" height="100">`
+      var img = `<img src="{% static "dashboard/Xmark.png" %}" alt="problem" width="150" height="100">`
       for(let i=0;i<response[room]['problems'].length;i++){
         problemsList += `<div class="problem"><p>${response[room]['problems'][i]}</p></div>`
 
