--- a/timetable/templates/timetable.html
+++ b/timetable/templates/timetable.html
@@ -172,6 +172,16 @@
     <tr>
         <th colspan="6">11:00</th>
     </tr>
+
+    <tr id="eleven-row" style="display:none" class="timerow">
+        <th>11:00</th>
+        <td><div class=timeframe  id="Sunday-11:00" ></div></td>
+        <td><div class=timeframe  id="Monday-11:00" ></div></td>
+        <td><div class=timeframe  id="Tuesday-11:00" ></div></td>
+        <td><div class=timeframe  id="Wednesday-11:00" ></div></td>
+        <td><div class=timeframe  id="Thursday-11:00" ></div></td>
+    </tr>
+
     <tr class="timerow">
         <th>11:45</th>
         <td><div class=timeframe  id="Sunday-11:45" ></div></td>
