Add recess period support and other UI/logic improvements
Introduced "recess" as a new timeslot in timetables, along with support for showing/hiding certain fields dynamically based on availability. Enhanced the display and filtering of rooms in the dashboard by adding a "show_in_dashboard" boolean field. Improved handling of urgent problems in Slack messages with better formatting and alignment. Optimized laptop loaning by setting max limits dynamically and updating related forms/templates for better usability. Upgraded backend image version in the Docker configuration.

--- a/LaptopLoaning/templates/laptops_home.html
+++ b/LaptopLoaning/templates/laptops_home.html
@@ -66,12 +66,13 @@
 </div>
 </div>
     <script>
+        document.getElementById("numberOfLaptops").max = {{ maxLaptops }}
         const returning_time = document.getElementById("returning_time")
         function setMin(a){
             console.log("test")
             returning_time.min = a.value
         }
-        var slider = document.getElementById("id_numberOfLaptops");
+        var slider = document.getElementById("numberOfLaptops");
         var output = document.getElementById("numberOfLaptops_value");
         output.innerHTML = slider.value; // Display the default slider value
 
