--- a/dashboard/templates/dashboard_home.html
+++ b/dashboard/templates/dashboard_home.html
@@ -12,7 +12,7 @@
             <div class="problem">
                 <div>
                 <h2>{{ problem.problem }} - {{ problem.room }} </h2>
-                <h3 class="date">{{ problem.reporter }}</h3>
+                <h3 class="date">{{ problem.name }}</h3>
                 <h3 class="date">{{problem.date_reported}}</h3>
                 </div>
                 <div class="button">
