--- a/timetable/templates/class_manager.html
+++ b/timetable/templates/class_manager.html
@@ -148,7 +148,12 @@ button:dir(ltr),.button-div:dir(ltr){
         <td><button disabled class="timeframe" type="button" id="Thursday-10:07" onClick="ButtonClick(this)"></button></td>
     </tr>
     <tr>
-        <th colspan="6">11:00</th>
+        <th>11:00</th>
+        <td><button disabled class="timeframe" type="button" id="Sunday-11:00" onClick="ButtonClick(this)"></button></td>
+        <td><button disabled class="timeframe" type="button" id="Monday-11:00" onClick="ButtonClick(this)"></button></td>
+        <td><button disabled class="timeframe" type="button" id="Tuesday-11:00" onClick="ButtonClick(this)"></button></td>
+        <td><button disabled class="timeframe" type="button" id="Wednesday-11:00" onClick="ButtonClick(this)"></button></td>
+        <td><button disabled class="timeframe" type="button" id="Thursday-11:00" onClick="ButtonClick(this)"></button></td>
     </tr>
     <tr>
         <th>11:45</th>
