Add max_students field to Class model and update related views and templates

--- a/timetable/templates/timetable.html
+++ b/timetable/templates/timetable.html
@@ -17,7 +17,8 @@
       <h2 id="teacher"></h2>
       <h3 id="room"></h3>
       <h4 id="hour"></h4>
-      <label for="description">{% trans "Description" %}: </label><p style="display: inline" id="description"></p>
+      <div><label for="description">{% trans "Description" %}: </label><p style="display: inline" id="description"></p></div>
+      <div><label for="student_count">{% trans "Students" %}: </label><p style="display: inline" id="student_count"></p></div>
 
   </div>
 
