--- a/static/laptopLoaning/styles/loaning_form.css
+++ b/static/laptopLoaning/styles/loaning_form.css
@@ -3,9 +3,10 @@ html,body{
     height: 100vh;
     width: 100vw;
     overflow:hidden;
+    margin: 0;
 }
 .container{
-    margin: auto 5px ;
+    margin: 5px ;
     box-sizing: border-box;
     padding: 20px;
     border: #fcc2d9 solid 3px;
