Update report form styles and viewport settings for improved layout and responsiveness

--- a/static/dashboard/styles/report_form.css
+++ b/static/dashboard/styles/report_form.css
@@ -16,6 +16,7 @@ form{
     color: #f3f3f3;
 }
 body,html{
+    overflow: hidden;
     box-sizing: border-box;
     padding: 5px;
     height: 100%;
