--- a/dashboard/templates/report_form.html
+++ b/dashboard/templates/report_form.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta charset="UTF-8">
     <title>{% trans "Report A Problem" %}</title>
     <link rel="stylesheet" href="{% static 'dashboard/styles/report_form.css' %}">
