--- a/timetable/templates/log.html
+++ b/timetable/templates/log.html
@@ -4,6 +4,9 @@
 {% block static%}
     <link rel="stylesheet" href="{% static "timetable/styles/bootstrap.min.css" %}">
 {% endblock %}
+{% block title %}
+    {% trans "Substitution Log" %}
+{% endblock %}
 {% block content %}
     <table class="table table-striped table-responsive-sm">
     <thead class="thead-light">
@@ -20,7 +23,7 @@
         <tr >
             <td>{{ class.date }} - {{ class.Class_That_Needs_Sub.hour }}</td>
             <td>{{ class.Class_That_Needs_Sub.name }}</td>
-            <td>{{ class.Class_That_Needs_Sub.teacher }}</td>
+            <td>{{ class.Class_That_Needs_Sub.who_teaches }}</td>
             <td>{{ class.Class_That_Needs_Sub.room }}</td>
             <td>{{ class.substitute_teacher }}</td>
         </tr>
