Update setSub.html - rename teacher field to who_teaches

--- a/timetable/templates/setSub.html
+++ b/timetable/templates/setSub.html
@@ -21,7 +21,7 @@
         <tr class="table-danger">
             <td>{{ class.date }} - {{ class.Class_That_Needs_Sub.hour }}</td>
             <td>{{ class.Class_That_Needs_Sub.name }}</td>
-            <td>{{ class.Class_That_Needs_Sub.teacher }}</td>
+            <td>{{ class.Class_That_Needs_Sub.who_teaches }}</td>
             <td>{{ class.Class_That_Needs_Sub.room }}</td>
             <td>
 
@@ -56,7 +56,7 @@
         <tr class="table-success">
             <td>{{ class.date }} - {{ class.Class_That_Needs_Sub.hour }}</td>
             <td>{{ class.Class_That_Needs_Sub.name }}</td>
-            <td>{{ class.Class_That_Needs_Sub.teacher }}</td>
+            <td>{{ class.Class_That_Needs_Sub.who_teaches }}</td>
             <td>{{ class.Class_That_Needs_Sub.room }}</td>
             <td>
 
