Update teacher_manager.html - adjust form field display style

--- a/timetable/templates/teacher_manager.html
+++ b/timetable/templates/teacher_manager.html
@@ -4,6 +4,9 @@
 {% block static %}
     <link type="text/css" rel="stylesheet" href="{% static "timetable/styles/bootstrap.min.css" %}">
     <style>
+    .form-fields div{
+        display: inline-block;
+    }
 .teacher-list{
     padding:0;
     margin: 0;
